# sci-ratio

./: .travis.yml  Data-SciRatio-Read.html  Data-SciRatio-Show.html  Data-SciRatio-Utils.html  Data-SciRatio.html  Makefile  README.md  doc-index.html  index-frames.html  index.html  mini_Data-SciRatio-Read.html  mini_Data-SciRatio-Show.html  mini_Data-SciRatio-Utils.html  mini_Data-SciRatio.html  sci-ratio.cabal  sci-ratio.haddock
src/Data/: SciRatio.hs
src/Data/SciRatio/: Read.hs  Show.hs  Utils.hs
tests/: Main.hs
