name:                sci-ratio
version:             0.1.0.0
synopsis:            Parsing and pretty-printing of exact rational numbers
                     with arbitrarily large exponents.
description:         Parsing and pretty-printing of exact rational numbers
                     with arbitrarily large exponents.
homepage:            https://github.com/Rufflewind/sci-ratio
bug-reports:         https://github.com/Rufflewind/sci-ratio/issues
license:             MIT
license-file:        LICENSE
author:              Phil Ruffwind
maintainer:          rf@rufflewind.com
copyright:           (c) 2014 Phil Ruffwind
category:            Text
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/Rufflewind/sci-ratio

library
  exposed-modules:
  build-depends:       base
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell98

test-suite main
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , sci-ratio
  default-language:    Haskell98
